# hornshell

./: README.md
esp32demo/: platformio.ini
esp32demo/include/: h_arduino.h  h_finder.h  h_func.h  h_split.h  h_var.h
esp32demo/src/: main.cpp
linux/: CException.h  compile.sh  h_finder.h  h_func.h  h_shell.h  h_split.h  h_var.h  hornshell_dc7  hornshell_pro_dev.cpp
linux/demo/rasp-interface/: app_head.h
vs_cmake/hornshell_vs_cmake/: CMakeLists.txt  h_finder.h  h_func.h  h_split.h  h_var.h  hornshell_vs_cmake.cpp  hornshell_vs_cmake.h
