# CMakeList.txt : CMake project for hornshell_vs_cmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("hornshell_vs_cmake")

# Add source to this project's executable.
add_executable (hornshell_vs_cmake "hornshell_vs_cmake.cpp" "hornshell_vs_cmake.h")

# TODO: Add tests and install targets if needed.
